--- a/index.html
+++ b/index.html
@@ -25,11 +25,21 @@
   <main>
     <h1>Pokedex</h1>
     <ol class="pokemon-list">
-      <li>
-        Bulbasaur
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
-          alt="Bulbasaur">
+      <li class="pokemon-list-item">
+        <article class="pokemon-card">
+          <span>#001</span>
+          <span>Bulbasaur</span>
+          <div class="details">
+            <ol class="types">
+              <li class="type">grass</li>
+              <li class="type">poison</li>
+            </ol>
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"
+              alt="Bulbasaur">
+          </div>
+        </article>
       </li>
+      <!--
       <li>
         Ivysaur
         <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/2.svg"
@@ -55,6 +65,7 @@
         <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/6.svg"
           alt="Charizard">
       </li>
+    -->
     </ol>
   </main>
 
