feat: add style for pokemon cards

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <ol class="pokemon-list">
       <li class="pokemon-list-item">
         <article class="pokemon-card">
-          <span>#001</span>
-          <span>Bulbasaur</span>
+          <span class="number">#001</span>
+          <span class="name">Bulbasaur</span>
           <div class="details">
             <ol class="types">
               <li class="type">grass</li>
