--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <main>
+  <main class="content">
     <h1>Pokedex</h1>
     <ol class="pokemon-list">
       <li class="pokemon-list-item">
