--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <ol class="pokemon-list">
       <li class="pokemon-list-item">
         <article class="pokemon-card">
-          <span class="number">#001</span>
+          <span class="number">#0001</span>
           <span class="name">Bulbasaur</span>
           <div class="details">
             <ol class="types">
@@ -39,33 +39,73 @@
           </div>
         </article>
       </li>
-      <!--
-      <li>
-        Ivysaur
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/2.svg"
-          alt="Ivysaur">
+      <li class="pokemon-list-item">
+        <article class="pokemon-card">
+          <span class="number">#0002</span>
+          <span class="name">Ivysaur</span>
+          <div class="details">
+            <ol class="types">
+              <li class="type">grass</li>
+              <li class="type">poison</li>
+            </ol>
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/2.svg"
+              alt="Ivysaur">
+          </div>
+        </article>
       </li>
-      <li>
-        Venusaur
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/3.svg"
-          alt="Venusaur">
+      <li class="pokemon-list-item">
+        <article class="pokemon-card">
+          <span class="number">#0003</span>
+          <span class="name">Venusaur</span>
+          <div class="details">
+            <ol class="types">
+              <li class="type">grass</li>
+              <li class="type">poison</li>
+            </ol>
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/3.svg"
+              alt="Venusaur">
+          </div>
+        </article>
       </li>
-      <li>
-        Charmander
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg"
-          alt="Charmander">
+      <li class="pokemon-list-item">
+        <article class="pokemon-card">
+          <span class="number">#0004</span>
+          <span class="name">Charmander</span>
+          <div class="details">
+            <ol class="types">
+              <li class="type">fire</li>
+            </ol>
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg"
+              alt="Charmander">
+          </div>
+        </article>
       </li>
-      <li>
-        Charmeleon
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/5.svg"
-          alt="Charmeleon">
+      <li class="pokemon-list-item">
+        <article class="pokemon-card">
+          <span class="number">#0005</span>
+          <span class="name">Charmeleon</span>
+          <div class="details">
+            <ol class="types">
+              <li class="type">fire</li>
+            </ol>
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/5.svg"
+              alt="Charmeleon">
+          </div>
+        </article>
       </li>
-      <li>
-        Charizard
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/6.svg"
-          alt="Charizard">
+      <li class="pokemon-list-item">
+        <article class="pokemon-card">
+          <span class="number">#0006</span>
+          <span class="name">Charizard</span>
+          <div class="details">
+            <ol class="types">
+              <li class="type">fire</li>
+            </ol>
+            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/6.svg"
+              alt="Charizard">
+          </div>
+        </article>
       </li>
-    -->
     </ol>
   </main>
 
