--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </ol>
   </main>
 
-  <script src="./assets/js/main.js">
-  </script>
+  <script src="./assets/js/poke-api.js"></script>
+  <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
