refactor: change background color according with pokémon's type

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
   <main class="content">
-    <h1>Pokedex</h1>
+    <h1>Pokédex</h1>
     <ol class="pokemon-list">
     </ol>
   </main>
