--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <h1>Pokédex</h1>
     <ol class="pokemon-list">
     </ol>
+
+    <div class="pagination">
+      <button id="loadMoreButton" type="button">Load More</button>
+    </div>
   </main>
 
   <script src="./assets/js/pokemon-model.js"></script>
